--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.png"
+      href="assets/images/log.gif"
       type="image/png"
     />
 
@@ -67,7 +67,7 @@
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/images/logo.png" alt="Logo" />
+                  <img src="assets/images/log1.png" alt="Logo" />
                 </a>
                 <!-- Logo -->
                 <button
@@ -189,16 +189,16 @@
                 <div class="header-social-icon">
                   <ul>
                     <li>
-                      <a href="#"><i class="lni-facebook-filled"></i></a>
+                      <a href="https://www.facebook.com/profile.php?id=100009772571981"><i class="lni-facebook-filled"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="lni-twitter-original"></i></a>
+                      <a href="https://twitter.com/luissmontoyap"><i class="lni-twitter-original"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="lni-behance-original"></i></a>
+                      <a href="https://github.com/LuissMontoya"><i class="lni-github-original"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="lni-linkedin-original"></i></a>
+                      <a href="https://www.linkedin.com/in/luissmontoyap/"><i class="lni-linkedin-original"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -224,25 +224,16 @@
           <div class="col-lg-8">
             <div class="section-title text-center">
               <h2 class="title">About Me</h2>
-              <p>
-                Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam
-                tempus, nunc id efficitur sagittis, urna est ultricies eros, ac
-                porta sem turpis quis leo.
-              </p>
             </div>
-            <!-- section title -->
-          </div>
-        </div>
-        <!-- row -->
+                    <!-- row -->
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-12 col-md-12">
             <div class="about-content mt-50">
-              <h5 class="about-title">Hi There! I'm Mark Parker</h5>
+              <h5 class="about-title">Hi There! I'm Luis Montoya</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                Systems engineer with experience in various technologies. My strong academic background supports my ability to effectively tackle projects 
+                across multiple platforms and systems. I am passionate about exploring new technologies and finding innovative solutions to technical challenges. 
+                I continually seek to grow professionally and contribute to the success of future projects in the field of systems engineering.
               </p>
               <ul class="clearfix">
                 <li>
@@ -251,7 +242,7 @@
                       <i class="lni-calendar"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Date of birth:</span> 8 June 1995</p>
+                      <p><span>Date of birth:</span> 4 November</p>
                     </div>
                   </div>
                   <!-- single info -->
@@ -262,7 +253,7 @@
                       <i class="lni-envelope"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Email:</span> parker@mysite.com</p>
+                      <p><span>Email:</span> luissmontoyap@gmail.com</p>
                     </div>
                   </div>
                   <!-- single info -->
@@ -273,7 +264,7 @@
                       <i class="lni-phone-handset"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Phone:</span> +1-202-555-0138</p>
+                      <p><span>Phone:</span> +57 311 243 2867</p>
                     </div>
                   </div>
                   <!-- single info -->
@@ -284,7 +275,7 @@
                       <i class="lni-map-marker"></i>
                     </div>
                     <div class="info-text">
-                      <p><span>Location:</span> 4373, El Centro, CA</p>
+                      <p><span>Location:</span> Pitalito, Huila, Colombia</p>
                     </div>
                   </div>
                   <!-- single info -->
@@ -293,81 +284,12 @@
             </div>
             <!-- about content -->
           </div>
-          <div class="col-xl-5 offset-xl-1 col-lg-6">
-            <div class="about-skills pt-25">
-              <div class="skill-item mt-25">
-                <div class="skill-header">
-                  <h6 class="skill-title">HTML</h6>
-                  <div class="skill-percentage">
-                    <div class="count-box counted">
-                      <span class="counter">80</span>
-                    </div>
-                    %
-                  </div>
-                </div>
-                <div class="skill-bar">
-                  <div class="bar-inner">
-                    <div class="bar progress-line" data-width="80"></div>
-                  </div>
-                </div>
-              </div>
-              <!-- skill item -->
-              <div class="skill-item mt-25">
-                <div class="skill-header">
-                  <h6 class="skill-title">CSS</h6>
-                  <div class="skill-percentage">
-                    <div class="count-box counted">
-                      <span class="counter">60</span>
-                    </div>
-                    %
-                  </div>
-                </div>
-                <div class="skill-bar">
-                  <div class="bar-inner">
-                    <div class="bar progress-line" data-width="60"></div>
-                  </div>
-                </div>
-              </div>
-              <!-- skill item -->
-              <div class="skill-item mt-25">
-                <div class="skill-header">
-                  <h6 class="skill-title">Photoshop</h6>
-                  <div class="skill-percentage">
-                    <div class="count-box counted">
-                      <span class="counter">50</span>
-                    </div>
-                    %
-                  </div>
-                </div>
-                <div class="skill-bar">
-                  <div class="bar-inner">
-                    <div class="bar progress-line" data-width="50"></div>
-                  </div>
-                </div>
-              </div>
-              <!-- skill item -->
-              <div class="skill-item mt-25">
-                <div class="skill-header">
-                  <h6 class="skill-title">Sketch</h6>
-                  <div class="skill-percentage">
-                    <div class="count-box counted">
-                      <span class="counter">90</span>
-                    </div>
-                    %
-                  </div>
-                </div>
-                <div class="skill-bar">
-                  <div class="bar-inner">
-                    <div class="bar progress-line" data-width="90"></div>
-                  </div>
-                </div>
-              </div>
-              <!-- skill item -->
-            </div>
-            <!-- about skills -->
-          </div>
+         
         </div>
         <!-- row -->
+          </div>
+        </div>
+
       </div>
       <!-- container -->
     </section>
@@ -510,12 +432,11 @@
             <div class="call-action-content text-center">
               <h2 class="action-title">Have any project on mind?</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua
-                nostrud.
+                I have many creative ideas and am excited to collaborate on new projects. 
+                Do you have something in mind? I am open to discussing any proposal and working together to make it a reality.
               </p>
               <ul>
-                <li><a class="main-btn custom" href="#">download cv</a></li>
+                <li><a class="main-btn custom" href="assets/LuisMontoyaCV.pdf" download>download cv</a></li>
                 <li><a class="main-btn custom-2" href="#">hire me</a></li>
               </ul>
             </div>
