--- a/index.html
+++ b/index.html
@@ -323,8 +323,9 @@
               <div class="service-content">
                 <h4 class="service-title"><a href="#">Web Design</a></h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  We create attractive and functional websites that reflect your brand identity and provide an exceptional
+                   user experience. From planning to implementation, we focus on usability and responsive design to drive 
+                   the success of your online presence.
                 </p>
               </div>
             </div>
@@ -387,8 +388,8 @@
               <div class="service-content">
                 <h4 class="service-title"><a href="#">Web Development</a></h4>
                 <p>
-                  Curabitur vitae magna felis. Nulla ac libero ornare,
-                  vestibulum lacus quis blandit enimdicta sunt.
+                  We create dynamic and responsive websites, implementing advanced functionalities and ensuring optimal 
+                  performance and security. Our approach ensures that your online platform is robust, scalable and highly functional.
                 </p>
               </div>
             </div>
